@@ -39,6 +39,9 @@ dependency bumped to 2.14.5.0. </li>
 dependency bumped to 2.9.8.0. </li>
  <li> <a href="//skarnet.org/software/s6/">s6</a>
 dependency bumped to 2.13.3.0. </li>
+ <li> The macros in <tt>s6-rc/config.h</tt> have changed.
+<tt>S6RC_LIVE_BASE</tt> is now named <tt>S6RC_LIVEDIR</tt>, in
+addition to the new <tt>S6RC_REPODIR</tt> and <tt>S6RC_BOOTDB</tt>. </li>
 </ul>
 
 <h2> in 0.5.6.0 </h2>
