@@ -1,2 +1,3 @@
+bootdb=/etc/s6-rc/compiled/current
 livedir=/run/s6-rc
 repodir=/var/lib/s6-rc/repository
