@@ -3,8 +3,6 @@
 #ifndef S6RC_CONSTANTS_H
 #define S6RC_CONSTANTS_H
 
-#define S6RC_COMPILED_BASE "/etc/s6-rc/compiled"
-
 #define S6RC_ONESHOT_RUNNER "s6rc-oneshot-runner"
 #define S6RC_ONESHOT_RUNNER_LEN (sizeof S6RC_ONESHOT_RUNNER - 1)
 
