@@ -108,7 +108,7 @@ int main (int argc, char const *const *argv)
   uint32_t listn, n ;
 
   PROG = "s6-rc-set-change" ;
-  wgola[GOLA_REPODIR] = S6RC_REPO_BASE ;
+  wgola[GOLA_REPODIR] = S6RC_REPODIR ;
 
   golc = GOL_main(argc, argv, rgolb, rgola, &wgolb, wgola) ;
   argc -= golc ; argv += golc ;
