@@ -111,7 +111,7 @@ int main (int argc, char const *const *argv)
   unsigned int golc ;
 
   PROG = "s6-rc-set-copy" ;
-  wgola[GOLA_REPODIR] = S6RC_REPO_BASE ;
+  wgola[GOLA_REPODIR] = S6RC_REPODIR ;
 
   golc = GOL_main(argc, argv, rgolb, rgola, &wgolb, wgola) ;
   argc -= golc ; argv += golc ;
