@@ -320,7 +320,7 @@ static inline unsigned int parse_list (char const *command)
 
 int main (int argc, char const *const *argv)
 {
-  char const *live = S6RC_LIVE_BASE ;
+  char const *live = S6RC_LIVEDIR ;
   unsigned int what, subwhat = 0 ;
   int up = 1 ;
   int blocking = 0 ;
